<resources>
    <string name="app_name">Match12</string>
    <string name="hint1">请输入用户名</string>
    <string name="hint2">请输入密码</string>
    <string name="reg">注册</string>
    <string name="login">登录</string>
    <string name="hint3">用户名</string>
    <string name="hint4">电话</string>
    <string name="hint5">密码</string>
    <string name="hint6">确认密码</string>
    <string name="jump">跳转到IMAGEVIEW界面</string>
    <string name="get">获取到的值是:</string>
    <string name="get2">用户名:</string>
    <string name="get3">密码:</string>
    <string name="title">图片界面</string>
    <string name="click">点击下一张按钮切换到下一张图片</string>
    <string name="btn1">下一张</string>
    <string name="choose">请选择你喜欢的语言:</string>
    <string name="lg1">Java语言</string>
    <string name="lg2">Python</string>
    <string name="lg3">C++</string>
    <string name="lg4">C语言</string>
    <string name="commit">提交</string>
    <string name="day">日活跃量已过亿</string>
    <string name="down">下载</string>

</resources>